--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/Tucsky/aggr-server#readme",
   "dependencies": {
-    "axios": "^0.18.0",
+    "@influxdata/influxdb-client": "^1.14.0",
+    "axios": "^0.21.1",
     "decamelize": "^4.0.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.1",
@@ -25,5 +26,11 @@
     "pako": "^1.0.6",
     "pmx": "^1.6.4",
     "ws": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/pako": "^1.0.1",
+    "@types/ws": "^7.4.4",
+    "prettier": "^2.3.1",
+    "ts-node": "^10.0.0"
   }
 }
