--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/pako": "^1.0.1",
     "@types/ws": "^7.4.4",
     "prettier": "^2.3.1",
-    "ts-node": "^10.0.0"
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4"
   }
 }
